postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
          - containerPort: 5432
            name: postgres
          volumeMounts:
          - name: data
            mountPath: /data
          - name: postgres-secret
            readOnly: true
            mountPath: /etc/postgres-secret
      volumes:
        - name: postgres-secret
          secret:
            secretName: postgres-secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
